--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "pnsk-json-filter-select",
-  "version": "0.0.1",
-  "license": "http://polymer.github.io/LICENSE.txt",
+  "version": "0.1.1",
+  "license": "MIT",
   "authors": [
     "Tolan Blundell <tolan@patternseek.net>"
   ],
